...

  Row(
      modifier = Modifier.fillMaxWidth().padding(horizontal = 16.dp, vertical = 8.dp),
      horizontalArrangement = Arrangement.spacedBy(8.dp),
      verticalAlignment = Alignment.CenterVertically) {
        FilterChip(
            icon = R.drawable.ic_calendar, onClick = onCalendarClick, testTag = "calendar_button")
        FilterChip(
            text = stringResource(R.string.button_filters),
            icon = R.drawable.ic_filter,
            onClick = { showBottomSheet = true })
        FilterChipWithHighlight(
            text = stringResource(R.string.button_favorites),
...
